--- a/Rochak/index.html
+++ b/Rochak/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Website</title>
+ <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
+    rel="stylesheet"/>
   <link rel="stylesheet" href=style.css>
 </head>
 
@@ -18,6 +20,7 @@
       <h4>Career</h4>
       <h4>Blog</h4>
       <h4>Account</h4>
+      <i class="ri-menu-3-fill"></i>
     </div>
   </div>
   </div>
